<?xml version="1.0"?>
<package format="3">
  <name>tag_detection</name>
  <version>0.0.0</version>
  <description>Detect AprilTags from /rgb_camera and publish tag pose in world frame</description>

  <maintainer email="prakash@todo.todo">prakash</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>cv_bridge</depend>

  <build_depend>opencv</build_depend>
  <exec_depend>opencv</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

